--- a/config/config.env
+++ b/config/config.env
@@ -3,7 +3,7 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=test_task
 DATABASE_USER=postgres
-DATABASE_PASSWORD=root
-HTTP_SERVER_ADDRESS=localhost:8080
+DATABASE_PASSWORD=1977
+HTTP_SERVER_ADDRESS=:8080
 HTTP_SERVER_TIMEOUT=4s
 HTTP_SERVER_IDLE_TIMEOUT=60s
